Backend: Embedded comments into posts and now sending them back with post endpoint. Can now add comments.